# actor

./: .gitignore  _oasis  actor.opam  jbuild-workspace
example/: jbuild
js/comm/: comm.js  comm_config.js  job_spawn_layer.js  peer_comm.html  peer_comm_layer.js  tester.js  webrtc_config.js
js/server/: main.js  package-lock.json  package.json  server.js
lib/: actor_mapre.ml  actor_mapreclient.ml  actor_mapreserver.ml  actor_param.ml  actor_paramclient.ml  actor_paramserver.ml  actor_peer.ml  actor_peerclient.ml  actor_peerserver.ml  actor_types.ml  actor_utils.ml  actor_zmq_repl.ml  worker.ml
omqjs/: jbuild  jsl_bindings.ml  jsl_bindings.mli  omq_context.ml  omq_context.mli  omq_socket.ml  omq_socket.mli  omq_types.ml  omq_utils.ml  pcl_bindings.ml  pcl_bindings.mli  pcl_config.ml  pcl_lwt.ml  pcl_lwt.mli  peer_comm_config.ml  test_omq_client.ml  test_omq_server.ml  test_pcl_bindings_client.ml  test_pcl_bindings_server.ml  test_peer_comm_bindings_client.ml  test_peer_comm_bindings_server.ml
omqjs/test/: client.html  genfiles.sh  server.html  test_pcl_bindings_client.js  test_pcl_bindings_server.js
pure/: actor_pure_barrier.ml  actor_pure_config.ml  actor_pure_manager.ml  actor_pure_param.ml  actor_pure_param.mli  actor_pure_paramclient.ml  actor_pure_paramserver.ml  actor_pure_service.ml  actor_pure_types.ml  actor_pure_utils.ml  actor_pure_worker.ml  actor_pure_zmq_repl.ml  cifar_loader.ml  jbuild  test_pure_owl_parallel.ml  test_pure_parameter.ml
src/: actor_manager.ml  actor_worker.ml  jbuild
src/lib/: jbuild
test/: jbuild  test_owl_parallel.ml
(+19 files in other folders)
